[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Utilities

[options.extras_require]
dev =
    isort == 5.7.0
    mypy == 0.812
    pylint == 2.7.2
    yapf == 0.30.0
    pytest >= 5.1.2
    pytest-cov >= 2.7.1
docs =
    sphinx >= 2.4
    sphinx_rtd_theme >= 0.4

[yapf]
column_limit = 9999

[isort]
line_length = 9999
default_section = THIRDPARTY
known_first_party = onlinejudge

[pylint]
# run: pylint --rcfile=setup.cfg modules_or_packages
argument-rgx = [_a-z][0-9_a-z]{0,30}$
variable-rgx = [_a-z][0-9_a-z]{0,30}$
disable =
    abstract-method,
    arguments-differ,
    bad-continuation,
    bare-except,
    broad-except,
    dangerous-default-value,
    duplicate-code,
    fixme,
    global-statement,
    inconsistent-return-statements,
    line-too-long,
    missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring,
    no-else-break,
    no-else-raise,
    no-else-return,
    no-member,
    no-self-use,
    protected-access,
    redefined-builtin,
    subprocess-popen-preexec-fn,
    too-few-public-methods,
    too-many-arguments,
    too-many-boolean-expressions,
    too-many-branches,
    too-many-instance-attributes,
    too-many-lines,
    too-many-locals,
    too-many-statements,
    undefined-loop-variable,
    unnecessary-lambda,
    unused-argument,
    unused-wildcard-import,
    useless-super-delegation,
    wildcard-import,
    wrong-import-order,


[mypy]

[mypy-appdirs.*]
ignore_missing_imports = True

[mypy-bs4.*]
ignore_missing_imports = True

[mypy-colorlog.*]
ignore_missing_imports = True

[mypy-jsonschema.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-sympy.*]
ignore_missing_imports = True

[mypy-typing.io.*]
ignore_missing_imports = True
